# app-template-opengl-sdl2

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO
shaders/: shader.frag  shader.vert  wireframe.frag  wireframe.vert
src/: application.cpp  application.h  main.cpp
src/imgui/: imconfig.h  imgui_impl_opengl3.cpp  myimgui.cpp  myimgui.h
src/opengl/: camera.cpp  camera.h  geometry.h  opengl.cpp  opengl.h  sparse_vector.h  volumes.h
